# Finite-Elements

./: CMakeLists.txt  ReadMe.txt
ProjectPostProcessor/: CMakeLists.txt
ProjectPostProcessor/data/: Stress.txt  U.txt  V.txt
ProjectPostProcessor/src/: fem.c  fem.h  glfem.c  glfem.h  main.c
ProjectPreProcessor/: CMakeLists.txt
ProjectPreProcessor/data/: mesh.geo  mesh.txt  our_mesh.geo  our_mesh.txt  our_mesh_axis.geo  our_problem.txt  problem.txt
ProjectPreProcessor/glfw/: CMakeLists.txt
ProjectPreProcessor/gmsh/gmsh-sdk/: README.txt
ProjectPreProcessor/src/: fem.c  fem.h  glfem.c  homework.c  main.c
data/: U.txt  V.txt  mesh.txt  problem.txt
gmsh/gmsh-sdk/lib/gmsh-4.12.0.dev1.dist-info/: METADATA
src/: 7.c  8.c  8main.c  fem.c  fem.h  glfem.c  glfem.h  homework.c  homework2.c  main.c  main2.c
src/ProjectPostProcessor/: CMakeLists.txt
src/ProjectPostProcessor/data/: U.txt
src/ProjectPreProcessor/src/: fem.c
